<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>examples</artifactId>
        <groupId>pro.api4</groupId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <artifactId>jsonapi4j-sampleapp-domain</artifactId>

    <name>JsonApi4j - Examples - Shared Domain / Operations</name>

    <properties>
        <maven.compiler.release>23</maven.compiler.release>
    </properties>

    <dependencies>
        <!-- jsonapi4j -->
        <dependency>
            <groupId>pro.api4</groupId>
            <artifactId>jsonapi4j-core</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>pro.api4</groupId>
            <artifactId>jsonapi4j-ac-plugin</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>pro.api4</groupId>
            <artifactId>jsonapi4j-oas-plugin</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- JSR-380 validation -->
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
        </dependency>

        <!-- OAS annotations -->
        <dependency>
            <groupId>io.swagger.core.v3</groupId>
            <artifactId>swagger-annotations-jakarta</artifactId>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>

        <!--Test Dependencies-->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.1.4</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                    <proc>full</proc>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
